--- a/.github/workflows/govee_light.yml
+++ b/.github/workflows/govee_light.yml
@@ -2,7 +2,9 @@ name: Run Govee Light Script
 
 on:
   workflow_dispatch:  # allows manual run
-
+  schedule:
+    - cron: '*20,40 * * * *'  # every 20 / 40 minutes
+    
 jobs:
   govee:
     runs-on: ubuntu-latest
