--- a/.github/workflows/govee_light.yml
+++ b/.github/workflows/govee_light.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Run govee.py
         env:
           GOVEE_API_KEY: ${{ secrets.GOVEE_API_KEY }}
-        #  TEST_AQHI: "7"  # <--- test AQHI value 
+          TEST_AQHI: "7"  # <--- test AQHI value 
         run: python govee.py
